syntax = "proto3";

package io.moia.mobilegateway;

service Booking {
  // Books a trips
  rpc BookTrip(BookingRequest) returns (BookingResponse) {}

  // Retrieves current location of the arriving vehicle (as a stream)
  rpc TrackVehicle(LocationRequest) returns (stream Location) {}
}


// BookTrip messages
message BookingRequest {
  string userId = 1;
  int32 passengers = 2;
  Address pickupAddress = 3;
  Address destinationAddress = 4;
}

message BookingResponse {
  enum Status {
    OK = 0;
    NOT_WITHIN_SERVICE_RANGE = 1;
  }

  string userId = 1;
  Status status = 2;
}


// GetCurrentLocation messages
message LocationRequest {}


// Common messages
message Address {
  string street = 1;
  string city = 2;
  Location location = 3;
}

message Location {
  double lat = 1;
  double lon = 2;
}